[tool.poetry]
name = "PythonVCS"
version = "0.0.2"
description = "API wrapper for gitea, pijul nest, etc."
authors = ["MisileLaboratory"]
license = "Misilelab license v1.6"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
wheel = "^0.37.1"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
